sandbox/output
GildedRose.java:18: error: variable item is already defined in method isNormalItem(Item)
        return item -> !item.name.equals("Aged Brie") && 
               ^
GildedRoseTest.java:35: error: cannot find symbol
            .filter(GildedRose.isNormalItem(item))
                                            ^
  symbol:   variable item
  location: class GildedRoseTest
2 errors
